Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2514

DCHECK on destroying an ExprContext

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.3.0
    • Impala 2.3.0
    • None

    Description

      Hit DCHECK

      F1008 16:41:37.301750 24707 expr-context.cc:41] Check failed: !prepared_ || closed
      

      When running the following query,

      select * from sp1 where code = from_unixtime(unix_timestamp(), 'yyyyMMMdd hh:mm:ss');
      

      step to reproduce

      CREATE TABLE default.sp1 (
        description STRING, 
        total_emp INT, 
        salary INT
      )
      PARTITIONED BY (
        code STRING
      )
      

      make sure insert more than one record.

      This seems related to IMPALA-1756.

        for (int i = 0; i < expr_ctxs.size(); ++i) {
          Status open_status = expr_ctxs[i]->Open(&state);
          if (!open_status.ok()) {
            expr_ctxs[i]->Close(&state);
            (env)->ThrowNew(JniUtil::internal_exc_class(), open_status.GetDetail().c_str());
            return result_bytes;
          }
      

      we return once Open() fails, but should all expr_ctxs be closed in this case?

      Attachments

        Activity

          People

            sailesh Sailesh Mukil
            jyu@cloudera.com Juan Yu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: