IMPALA-2514: DCHECK on destroying an ExprContext

If an error occurs while processing an Expr, only that ExprContext
is closed and the others are still left open. This leads to a DCHECK
during teardown of the query because the destructor of ExprContext
expects it to be closed.

In this patch, we close all the ExprContexts if an error occurs in any
one.

Change-Id: Ic748bfd213511c314c59594d075048f6c6d82073
Reviewed-on: http://gerrit.cloudera.org:8080/1222
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Tested-by: Internal Jenkins
(cherry picked from commit 15027b61ba62b6617f9c88dc3352a7d0de696c1e)
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/9435
Reviewed-by: Juan Yu <jyu@cloudera.com>
Tested-by: Juan Yu <jyu@cloudera.com>
(cherry picked from commit 19f58b291164983c9268a5cac5f0f66050ab87c2)